# gpt-image-generator-fastapi

./: .gitignore  README.md  package.json  run.sh  tsconfig.types.json
.github/: SECRETS.md
.github/workflows/: ci.yml  release.yml
python/: README.md  pyproject.toml
python/gti/: __init__.py
python/src/gti/: client.py  provider.py  request_builder.py  server.py
python/tests/: test_auth.py  test_client.py  test_config.py  test_extract.py  test_provider.py  test_request_builder.py  test_save.py  test_server.py  test_sse_parser.py
src/: config.js  index.js
src/auth/: loadCodexSession.js  validateSession.js
src/cli/: generate.js
src/codex/: buildResponsesRequest.js  extractImageGeneration.js  streamResponsesSse.js
src/fs/: saveImage.js
src/providers/: codexCliProvider.js  createProvider.js  privateCodexProvider.js  providerTypes.js
tests/: auth-load.test.js  codex-cli-provider.test.js  helpers.js  image-extract.test.js  image-save.test.js  library-exports.test.js  provider-auto.test.js  provider-success.test.js  provider-unauthorized.test.js  request-build.test.js  stream-sse.test.js
types/: config.d.ts  index.d.ts
types/auth/: loadCodexSession.d.ts  validateSession.d.ts
types/codex/: buildResponsesRequest.d.ts  extractImageGeneration.d.ts  streamResponsesSse.d.ts
types/fs/: saveImage.d.ts
types/providers/: codexCliProvider.d.ts  createProvider.d.ts  privateCodexProvider.d.ts  providerTypes.d.ts
