[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "god-tibo-imagen"
version = "0.2.0"
description = "Python SDK for Codex private image generation backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gti"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
